# RustySniff

./: Cargo.toml  README.md
network/: Cargo.toml
network/src/: lib.rs  r_lookup.rs  statistic.rs
network/src/gfw/: mod.rs
network/src/gfw/gtcp/: buffer.rs  fet.rs  mod.rs  trojan.rs
network/src/types/: dns.rs  http.rs  mod.rs  tcp.rs
py-sdk/: Cargo.toml
py-sdk/python/: httpy.pyi  statisticpy.pyi  tcpy.pyi
py-sdk/src/: lib.rs
py-sdk/src/types/: http.rs  mod.rs  statistic.rs  tcp.rs
src/: main.rs
src/cli/: mod.rs
src/network/: r_lookup.rs
src/network/types/: http.rs  mod.rs  tcp.rs
