[package]
name = "rustysniff"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["network", "py-sdk"]
resolver = "2"

[features]
default = []
python = ["pyo3"]


[dependencies]
pcap = "2.2.0"
pnet = "0.35.0"
# dns-lookup = "2.0.4"
httparse = "1.10.1"
rustyline = "16.0.0"
clap = { version = "4.5.32", features = ["derive"] }
shlex = "1.3.0"
network = { path = "network" }

[target.'cfg(feature = "python")'.dependencies.pyo3]
optional = true
version = "0.25.0"
features = ["auto-initialize"]
